WIP: Work on topThreeWord function

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
       <p>Total Word Count: <span id="total-count"></span></p>
       <br />
       <p>Selected Word Count: <span id="selected-count"></span></p>
-      <span id="bolded-passage"></span>
+      <br />
+      <p>Bolded Passage: <span id="bolded-passage"></span></p>
+      <br />
+      <p>Top Three Words: <span id="top-three-words"></span></p>
     </div>
   </body>
 </html>
